<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddExerciseActivity"
    >

    <RelativeLayout
        android:id="@+id/div1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"

            android:entries="@array/exercise_list"
            android:paddingTop="20dp"
            android:textAlignment="center" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/spinner">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/exercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Exercise" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/textInputLayout"
            android:layout_below="@id/spinner">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/calorie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Calorie per hour" />
        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/divTime"
        android:layout_width="match_parent"
        android:layout_height="412dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/div1">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="Select a date"
            android:fontFamily="casual"
            android:paddingTop="20dp"
            android:textSize="@dimen/titleSmall" />

        <RelativeLayout
            android:id="@+id/divfrom"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvDate"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="From"
                android:fontFamily="casual"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/titleSmall" />

            <TimePicker
                android:id="@+id/simpleTimePicker"
                android:layout_width="250dp"
                android:layout_height="130dp"
                android:layout_toRightOf="@+id/textView3"
                android:timePickerMode="spinner" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/divTo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/divfrom"
            android:layout_centerHorizontal="true">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="To"
                android:fontFamily="casual"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/titleSmall" />

            <TimePicker
                android:id="@+id/simpleTimePicker2"
                android:layout_width="250dp"
                android:layout_height="130dp"
                android:layout_alignParentRight="true"
                android:timePickerMode="spinner" />
        </RelativeLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="29dp"
            android:onClick="onSendMessage"
            android:text="Add Activity"
            android:textSize="16sp" />
    </RelativeLayout>











</RelativeLayout>